--- a/index.html
+++ b/index.html
@@ -187,13 +187,24 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8">
                     <h2 style="padding-top:30px;">General Information</h2>
+
                     <div class="panel-group" id="accordion">
                         <div class="panel">
                             <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse1"
-                                   aria-expanded="true">Who can attend?</a>
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">What is a
+                                    hackathon?</a>
                             </h4>
                             <div id="collapse1" class="panel-collapse collapse in">
+                                <p>A hackathon is an invention marathon. Students come together in teams to build cool
+                                    software and hardware projects over 24 hours.</p>
+                            </div>
+                        </div>
+                        <div class="panel">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse2"
+                                   aria-expanded="true">Who can attend?</a>
+                            </h4>
+                            <div id="collapse2" class="panel-collapse collapse">
                                 <p>vhHacks is open to all high school students of all skill levels. If you're older
                                     (post-secondary or above) and have experience in computer science, you can apply to
                                     be a mentor.</p>
@@ -201,23 +212,13 @@
                         </div>
                         <div class="panel">
                             <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">How much does it
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">How much does it
                                     cost?</a>
                             </h4>
-                            <div id="collapse2" class="panel-collapse collapse">
+                            <div id="collapse3" class="panel-collapse collapse">
                                 <p>Nothing! vhHacks is completely free of charge at the event. However, if you are
                                     booking a stay near the event, or taking public transport, those will cost
                                     money.</p>
-                            </div>
-                        </div>
-                        <div class="panel">
-                            <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">What is a
-                                    hackathon?</a>
-                            </h4>
-                            <div id="collapse3" class="panel-collapse collapse">
-                                <p>A hackathon is an invention marathon. Students come together in teams to build cool
-                                    software and hardware projects over 24 hours.</p>
                             </div>
                         </div>
 
@@ -229,8 +230,7 @@
                             <div id="collapse4" class="panel-collapse collapse">
                                 <p>Yes. Food and snacks are provided throughout the event, even overnight! (We know you
                                     night owls get the munchies) There are also restaurants around the venue to buy food
-                                    and snacks,
-                                    and you can always bring your own!</p>
+                                    and snacks, and you can always bring your own!</p>
                             </div>
                         </div>
                         <div class="panel">
@@ -295,7 +295,7 @@
                             <div id="collapse9" class="panel-collapse collapse">
                                 <p>
                                     Since vhHacks is a 24 hour event, prepare to stay overnight! Food is provided at the
-                                    event, so don't worry about that.
+                                    event, so don't worry about that. More information will come sooner to the event.
                                 </p>
                             </div>
                         </div>
@@ -378,6 +378,7 @@
                     </div>
                 </div>
             </div>
+            <!--insert sponsor showcase boxes-->
         </div>
     </section>
 
