--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
                     <div class="panel-group" id="accordion">
                         <div class="panel">
                             <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">What is a
-                                    hackathon?</a>
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse1"
+                                   aria-expanded="true">What is a hackathon?</a>
                             </h4>
                             <div id="collapse1" class="panel-collapse collapse in">
                                 <p>A hackathon is an invention marathon. Students come together in teams to build cool
@@ -201,8 +201,7 @@
                         </div>
                         <div class="panel">
                             <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse2"
-                                   aria-expanded="true">Who can attend?</a>
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">Who can attend?</a>
                             </h4>
                             <div id="collapse2" class="panel-collapse collapse">
                                 <p>vhHacks is open to all high school students of all skill levels. If you're older
