--- a/index.html
+++ b/index.html
@@ -10,9 +10,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Title -->
     <title>vhHacks 2020</title>
-    <!-- Place favicon.ico in the root directory -->
-    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-    <link rel="shortcut icon" type="image/ico" href="images/LOGOblue.png"/>
+    <!-- Place favicon.ico in the icon directory -->
+    <link rel="apple-touch-icon" sizes="57x57" href="icon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="icon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="icon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="icon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="icon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="icon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="icon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="icon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="icon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="icon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="icon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
+    <link rel="manifest" href="icon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="icon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <!-- Plugin-CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
@@ -172,7 +187,86 @@
             </div>
         </div>
     </section>
+
     <!--Feature-area/-->
+    <section class="section-padding" id="sponsors">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
+                    <div class="page-title">
+                        <h2>Sponsor Spotlight</h2>
+                        <h3>Coming Soon!</h3>
+                    </div>
+                </div>
+            </div>
+            <!--
+            //commented out sponsor boxes
+            <div class="row">
+                <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+                    <div class="testimonials">
+                        <div class="testimonial">
+                            <div class="testimonial-photo">
+                                <img src="images/avatar-small-1.png" alt="">
+                            </div>
+                            <h3>AR Rahman</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel vero dolore officiis, velit
+                                id libero illum harum hic magni, quae repellendus adipisci possimus saepe nostrum
+                                doloribus repudiandae asperiores commodi voluptate.</p>
+                        </div>
+                        <div class="testimonial">
+                            <div class="testimonial-photo">
+                                <img src="images/avatar-small-2.png" alt="">
+                            </div>
+                            <h3>AR Rahman</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel vero dolore officiis, velit
+                                id libero illum harum hic magni, quae repellendus adipisci possimus saepe nostrum
+                                doloribus repudiandae asperiores commodi voluptate.</p>
+                        </div>
+                        <div class="testimonial">
+                            <div class="testimonial-photo">
+                                <img src="images/avatar-small-3.png" alt="">
+                            </div>
+                            <h3>AR Rahman</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel vero dolore officiis, velit
+                                id libero illum harum hic magni, quae repellendus adipisci possimus saepe nostrum
+                                doloribus repudiandae asperiores commodi voluptate.</p>
+                        </div>
+                        <div class="testimonial">
+                            <div class="testimonial-photo">
+                                <img src="images/avatar-small-4.png" alt="">
+                            </div>
+                            <h3>AR Rahman</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel vero dolore officiis, velit
+                                id libero illum harum hic magni, quae repellendus adipisci possimus saepe nostrum
+                                doloribus repudiandae asperiores commodi voluptate.</p>
+                        </div>
+                        <div class="testimonial">
+                            <div class="testimonial-photo">
+                                <img src="images/avatar-small-5.png" alt="">
+                            </div>
+                            <h3>AR Rahman</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel vero dolore officiis, velit
+                                id libero illum harum hic magni, quae repellendus adipisci possimus saepe nostrum
+                                doloribus repudiandae asperiores commodi voluptate.</p>
+                        </div>
+                        <div class="testimonial">
+                            <div class="testimonial-photo">
+                                <img src="images/avatar-small-6.png" alt="">
+                            </div>
+                            <h3>AR Rahman</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel vero dolore officiis, velit
+                                id libero illum harum hic magni, quae repellendus adipisci possimus saepe nostrum
+                                doloribus repudiandae asperiores commodi voluptate.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            -->
+            <!--insert sponsor showcase boxes-->
+        </div>
+    </section>
+
 
     <section class="section-padding" id="faq-page">
         <div class="container">
@@ -308,79 +402,6 @@
         </div>
     </section>
 
-    <section class="section-padding" id="sponsors">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
-                    <div class="page-title">
-                        <h2>Sponsor Spotlight</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
-                    <div class="testimonials">
-                        <div class="testimonial">
-                            <div class="testimonial-photo">
-                                <img src="images/avatar-small-1.png" alt="">
-                            </div>
-                            <h3>AR Rahman</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel vero dolore officiis, velit
-                                id libero illum harum hic magni, quae repellendus adipisci possimus saepe nostrum
-                                doloribus repudiandae asperiores commodi voluptate.</p>
-                        </div>
-                        <div class="testimonial">
-                            <div class="testimonial-photo">
-                                <img src="images/avatar-small-2.png" alt="">
-                            </div>
-                            <h3>AR Rahman</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel vero dolore officiis, velit
-                                id libero illum harum hic magni, quae repellendus adipisci possimus saepe nostrum
-                                doloribus repudiandae asperiores commodi voluptate.</p>
-                        </div>
-                        <div class="testimonial">
-                            <div class="testimonial-photo">
-                                <img src="images/avatar-small-3.png" alt="">
-                            </div>
-                            <h3>AR Rahman</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel vero dolore officiis, velit
-                                id libero illum harum hic magni, quae repellendus adipisci possimus saepe nostrum
-                                doloribus repudiandae asperiores commodi voluptate.</p>
-                        </div>
-                        <div class="testimonial">
-                            <div class="testimonial-photo">
-                                <img src="images/avatar-small-4.png" alt="">
-                            </div>
-                            <h3>AR Rahman</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel vero dolore officiis, velit
-                                id libero illum harum hic magni, quae repellendus adipisci possimus saepe nostrum
-                                doloribus repudiandae asperiores commodi voluptate.</p>
-                        </div>
-                        <div class="testimonial">
-                            <div class="testimonial-photo">
-                                <img src="images/avatar-small-5.png" alt="">
-                            </div>
-                            <h3>AR Rahman</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel vero dolore officiis, velit
-                                id libero illum harum hic magni, quae repellendus adipisci possimus saepe nostrum
-                                doloribus repudiandae asperiores commodi voluptate.</p>
-                        </div>
-                        <div class="testimonial">
-                            <div class="testimonial-photo">
-                                <img src="images/avatar-small-6.png" alt="">
-                            </div>
-                            <h3>AR Rahman</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel vero dolore officiis, velit
-                                id libero illum harum hic magni, quae repellendus adipisci possimus saepe nostrum
-                                doloribus repudiandae asperiores commodi voluptate.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!--insert sponsor showcase boxes-->
-        </div>
-    </section>
-
 
     <section class="section-padding" id="partners">
         <div class="container">
@@ -397,7 +418,15 @@
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="box">
                         <div class="box-icon">
-                            <a href="https://www.facebook.com/nwplusubc/"><img src="images/nwplus.png"
+                            <a href="https://nwplus.io"><img src="images/nwplus.png"
+                                                                               style="height:175px" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="box">
+                        <div class="box-icon">
+                            <a href="https://vikingsdev.ca"><img src="images/vikingsdevlogo.png"
                                                                                style="height:175px" alt=""></a>
                         </div>
                     </div>
