Bubbles are working, sort of

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </div>
 </header>
 <!--Header-area/-->
-<section class="sky-bg">
+<div class="sky-bg">
     <section class="angle-bg section-padding" id="about">
         <div class="container">
             <div class="row">
@@ -450,7 +450,8 @@
             </div>
         </div>
     </footer>
-</section>
+    <div id="bubbles"></div>
+</div>
 
 
 <!--Vendor-JS-->
@@ -466,6 +467,8 @@
 <!--Main-active-JS-->
 <script src="js/main.js"></script>
 <script src="js/navbarscroll.js"></script>
+<script src="js/particles.js"></script>
+<script src="js/app.js"></script>
 </body>
 
 </html>
