Remove temporary fish. Fix css error

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </div>
     </section>
 
-    <img src="images/salmon.svg" id="fish1">
+    <!--<img src="images/salmon.svg" id="fish1">-->
 
     <!--Feature-area-->
     <section class="section-padding" id="learn">
