--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="row v-center">
             <div class="col-xs-2 col-md-2"></div>
             <div class="col-xs-8 col-md-8 header-text text-center">
-                <img src="images/vhhacksclear.png" style="height:30vh">
+                <img src="images/vhhacksclear.png" style="height:30vh; width:30vh;" id="vhhackslanding">
                 <h2>vhHacks 2020</h2>
                 <p>March 14 - 15, 2020 <br> @ The University of British Columbia</p>
                 <a href="#" class="button" >Register Now!</a>
