Remove work in progress items to live site

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <li><a href="#sponsors">Sponsors</a></li>
                 <li><a href="#faq-page">FAQ</a></li>
                 <li><a href="#partners">Partners</a></li>
-                <li><a href="#">Sign up!</a></li>
+                <!--<li><a href="#">Sign up!</a></li>-->
             </ul>
         </nav>
     </div>
@@ -97,7 +97,7 @@
                 <img src="images/vhhacksclear.png" style="height:30vh; width:30vh;" id="vhhackslanding">
                 <h2>vhHacks 2020</h2>
                 <p>March 14 - 15, 2020 <br> @ The University of British Columbia</p>
-                <a href="#" class="button" >Register Now!</a>
+                <!--<a href="#" class="button" >Register Now!</a>-->
             </div>
             <div class="col-xs-2 col-md-2"></div>
         </div>
@@ -123,9 +123,9 @@
                                             showcase a project in under 24 hours. No experience? No problem! vhHacks is
                                             beginner friendly, so anyone can join and learn a new skill!</p>
                                     </div>
-                                    <div class="caption-button" data-animation="animated fadeInUp">
+                                    <!--<div class="caption-button" data-animation="animated fadeInUp">
                                         <a href="#" class="button">Register now!</a>
-                                    </div>
+                                    </div>-->
                                 </div>
                                 <div class="col-xs-12 col-md-6">
                                     <div class="one" data-animation="animated fadeInRight">
@@ -151,9 +151,11 @@
                         <h2>Pick a path!</h2>
                         <p>vhHacks is all about learning! If you haven't attended a hackathon before, pick a path below
                             to make your first stride!</p>
+
+                        <h3><br>Coming Soon!</h3>
                     </div>
                 </div>
-            </div>
+            </div><!--
             <div class="row">
                 <div class="col-xs-12 col-sm-4">
                     <div class="box">
@@ -185,7 +187,7 @@
                             raraincididunt ugt labore.</p>
                     </div>
                 </div>
-            </div>
+            </div>-->
         </div>
     </section>
 
@@ -439,6 +441,7 @@
 
     <footer class="footer-area relative" id="contact-page">
         <div class="absolute footer-bg"></div>
+        <img src="images/beluga.svg" id="beluga">
         <div class="full-height v-center">
             <div class="container">
                 <div class="row">
@@ -451,7 +454,7 @@
             </div>
         </div>
     </footer>
-    <div id="bubbles"></div>
+    <!--<div id="bubbles"></div>-->
 </div>
 
 
