--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
             </div>
         </div>
     </footer>
-    <!--<div id="bubbles"></div>-->
+    <div id="bubbles"></div>
 </div>
 
 
