Added hacker paths with stock icons

--- a/index.html
+++ b/index.html
@@ -151,43 +151,49 @@
                         <h2>Pick a path!</h2>
                         <p>vhHacks is all about learning! If you haven't attended a hackathon before, pick a path below
                             to make your first stride!</p>
-
-                        <h3><br>Coming Soon!</h3>
                     </div>
                 </div>
-            </div><!--
+            </div>
             <div class="row">
-                <div class="col-xs-12 col-sm-4">
+                <div class="col-xs-12 col-sm-6">
                     <div class="box">
                         <div class="box-icon">
-                            <img src="images/service-icon-1.png" alt="">
+                            <img src="images/portfolio-icon-6.png" alt="" style="height:120px">
                         </div>
-                        <h4>Game Design</h4>
-                        <p>Lorem ipsum dolor sit amt, consectet adop adipisicing elit, sed do eiusmod tepo
-                            raraincididunt ugt labore.</p>
+                        <h4>Designer</h4>
+                        <p>Design the user interface for your hack.</p>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-4">
+                <div class="col-xs-12 col-sm-6">
                     <div class="box">
                         <div class="box-icon">
-                            <img src="images/service-icon-2.png" alt="">
+                            <img src="images/service-icon-1.png" alt="" style="height:120px">
                         </div>
-                        <h4>Front End</h4>
-                        <p>Lorem ipsum dolor sit amt, consectet adop adipisicing elit, sed do eiusmod tepo
-                            raraincididunt ugt labore.</p>
+                        <h4>Programmer</h4>
+                        <p>Write the code that makes your hack work.</p>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-4">
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-sm-6">
                     <div class="box">
                         <div class="box-icon">
-                            <img src="images/service-icon-3.png" alt="">
+                            <img src="images/portfolio-icon-5.png" alt="" style="height:120px">
                         </div>
-                        <h4>Back End</h4>
-                        <p>Lorem ipsum dolor sit amt, consectet adop adipisicing elit, sed do eiusmod tepo
-                            raraincididunt ugt labore.</p>
+                        <h4>Game developer</h4>
+                        <p>Create a unique game in a short period of time.</p>
                     </div>
                 </div>
-            </div>-->
+                <div class="col-xs-12 col-sm-6">
+                    <div class="box">
+                        <div class="box-icon">
+                            <img src="images/service-icon-2.png" alt="" style="height:120px">
+                        </div>
+                        <h4>Hardware hacker</h4>
+                        <p>Use hardware to solve modern problems.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
