Fishy are now swimming

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </div>
     </section>
 
-    <!--<img src="images/salmon.svg" id="fish1">-->
+    <img src="images/fishy-18.svg" id="fish1">
 
     <!--Feature-area-->
     <section class="section-padding" id="learn">
@@ -197,6 +197,7 @@
         </div>
     </section>
 
+    <img src="images/fishy-15.svg" id="fish2">
     <!--Feature-area/-->
     <section class="section-padding" id="sponsors">
         <div class="container">
@@ -276,6 +277,7 @@
         </div>
     </section>
 
+    <img src="images/fishy-17.svg" id="fish3">
 
     <section class="section-padding" id="faq-page">
         <div class="container">
@@ -411,6 +413,7 @@
         </div>
     </section>
 
+    <img src="images/fishy-14.svg" id="fish4">
 
     <section class="section-padding" id="partners">
         <div class="container">
