fix z-index for faq

--- a/index.html
+++ b/index.html
@@ -405,10 +405,14 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="row" style="padding-top: 50px">
-                <p class="text-center">Couldn't find an answer? Send your question to <a
-                        href="mailto:contact@vhhacks.ca">contact@vhhacks.ca</a></p>
+                <div class="row" style="padding-top: 50px">
+                    <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
+                        <div class="page-title">
+                            <p class="text-center">Couldn't find an answer? Send your question to <a
+                                    href="mailto:contact@vhhacks.ca">contact@vhhacks.ca</a></p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
