Fix font sizes for text. Reorganize landing page and other thigns

--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@
         <nav class="collapse navbar-collapse" id="primary-menu">
             <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="#home-page">Home</a></li>
-                <li><a href="#about">Who We Are</a></li>
                 <li><a href="#learn">Learn</a></li>
                 <li><a href="#sponsors">Sponsors</a></li>
                 <li><a href="#faq-page">FAQ</a></li>
@@ -94,10 +93,9 @@
         <div class="row v-center">
             <div class="col-xs-2 col-md-2"></div>
             <div class="col-xs-8 col-md-8 header-text text-center">
-                <img src="images/vhhacksclear.png" style="height:30vh; width:30vh;" id="vhhackslanding">
                 <h2>vhHacks 2020</h2>
-                <p>March 14 - 15, 2020 <br> @ The University of British Columbia</p>
-                <!--<a href="#" class="button" >Register Now!</a>-->
+                <p>March 14 - 15 <br> University of British Columbia</p>
+                <a href="#" class="button" >Register Now!</a>
             </div>
             <div class="col-xs-2 col-md-2"></div>
         </div>
@@ -114,7 +112,7 @@
                             <div class="v-center">
                                 <div class="col-xs-12 col-md-6">
                                     <div class="caption-title" data-animation="animated fadeInUp">
-                                        <h2>What is vhHacks</h2>
+                                        <h2>What is vhHacks?</h2>
                                     </div>
                                     <div class="caption-desc" data-animation="animated fadeInUp">
                                         <p>vhHacks is one of Greater Vancouver's <i>only</i> hackathons dedicated to
