Increased resolution of home page icon

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a href="#" class="navbar-brand logo">
-                <img src="images/homeicon.png" class="d-inline-block">
+                <img src="images/homeicon.png" class="d-inline-block" style="max-height:32px">
             </a>
         </div>
         <!--Logo/-->
