Use PNG FIles to reduce lag, add day night responsiveness

--- a/index.html
+++ b/index.html
@@ -483,6 +483,7 @@
 <script src="js/navbarscroll.js"></script>
 <script src="js/particles.js"></script>
 <script src="js/app.js"></script>
+<script src="js/daynight.js"></script>
 </body>
 
 </html>
