Add Path Images

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <div class="col-xs-12 col-sm-6">
                     <div class="box">
                         <div class="box-icon">
-                            <img src="images/portfolio-icon-6.png" alt="" style="height:120px">
+                            <img src="images/frontend-v1.svg" alt="" style="height:180px">
                         </div>
                         <h4>Designer</h4>
                         <p>Design the user interface for your hack.</p>
@@ -165,7 +165,7 @@
                 <div class="col-xs-12 col-sm-6">
                     <div class="box">
                         <div class="box-icon">
-                            <img src="images/service-icon-1.png" alt="" style="height:120px">
+                            <img src="images/backend-v1.svg" alt="" style="height:180px">
                         </div>
                         <h4>Programmer</h4>
                         <p>Write the code that makes your hack work.</p>
@@ -176,7 +176,7 @@
                 <div class="col-xs-12 col-sm-6">
                     <div class="box">
                         <div class="box-icon">
-                            <img src="images/portfolio-icon-5.png" alt="" style="height:120px">
+                            <img src="images/game-v1.svg" alt="" style="height:180px">
                         </div>
                         <h4>Game developer</h4>
                         <p>Create a unique game in a short period of time.</p>
@@ -185,7 +185,7 @@
                 <div class="col-xs-12 col-sm-6">
                     <div class="box">
                         <div class="box-icon">
-                            <img src="images/service-icon-2.png" alt="" style="height:120px">
+                            <img src="images/hardware-v1.svg" alt="" style="height:180px">
                         </div>
                         <h4>Hardware hacker</h4>
                         <p>Use hardware to solve modern problems.</p>
