Added angler fish

--- a/index.html
+++ b/index.html
@@ -449,6 +449,9 @@
         </div>
     </section>
 
+
+    <img src="images/angler.svg" id="fish5">
+
     <footer class="footer-area relative" id="contact-page">
         <div class="absolute footer-bg"></div>
         <img src="images/beluga.svg" id="beluga">
