social media button templates

--- a/index.html
+++ b/index.html
@@ -452,6 +452,13 @@
 
     <img src="images/angler.svg" id="fish5">
 
+    <section class = "social-section text-center">
+        <a href=""><i class="sicon ti-instagram"></i></a>
+        <a href=""><i class="sicon ti-facebook"></i></a>
+        <a href=""><i class="sicon ti-github"></i></a>
+        <a href=""><i class="sicon ti-twitter"></i></a>
+    </section>
+
     <footer class="footer-area relative" id="contact-page">
         <div class="absolute footer-bg"></div>
         <img src="images/beluga.svg" id="beluga">
