Updated Social Links

--- a/index.html
+++ b/index.html
@@ -449,14 +449,16 @@
         </div>
     </section>
 
-
     <img src="images/angler.svg" id="fish5">
 
     <section class = "social-section text-center">
-        <a href=""><i class="sicon ti-instagram"></i></a>
-        <a href=""><i class="sicon ti-facebook"></i></a>
-        <a href=""><i class="sicon ti-github"></i></a>
-        <a href=""><i class="sicon ti-twitter"></i></a>
+        <div class = "container">
+            <div class = "row">
+                <a href="https://www.instagram.com/vhhacks/" target="_blank"><i class="sicon ti-instagram"></i></a>
+                <a href="https://www.facebook.com/vancouverhighschoolhackathon/" target="_blank"><i class="sicon ti-facebook"></i></a>
+                <a href="" target="_blank"><i class="sicon ti-twitter-alt"></i></a>
+            </div>
+        </div>
     </section>
 
     <footer class="footer-area relative" id="contact-page">
