Replace Bob with Angler

--- a/index.html
+++ b/index.html
@@ -449,8 +449,6 @@
         </div>
     </section>
 
-    <img src="images/angler.svg" id="fish5">
-
     <section class = "social-section text-center">
         <div class = "container">
             <div class = "row">
@@ -462,7 +460,7 @@
 
     <footer class="footer-area relative" id="contact-page">
         <div class="absolute footer-bg"></div>
-        <img src="images/beluga.svg" id="beluga">
+        <img src="images/angler.svg" id="beluga">
         <div class="full-height v-center">
             <div class="container">
                 <div class="row">
