--- a/index.html
+++ b/index.html
@@ -139,141 +139,32 @@
     </section>
 
     <img src="images/fishy-18.svg" id="fish1">
-
-    <!--Feature-area-->
-    <section class="section-padding" id="learn">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
-                    <div class="page-title">
-                        <h2>Pick a path!</h2>
-                        <p>vhHacks is all about learning! If you haven't attended a hackathon before, pick a path below
-                            to make your first stride!</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12 col-sm-6">
-                    <div class="box">
-                        <div class="box-icon">
-                            <img src="images/frontend-v1.svg" alt="" style="height:180px">
-                        </div>
-                        <h4>Designer</h4>
-                        <p>Design the user interface for your hack.</p>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-sm-6">
-                    <div class="box">
-                        <div class="box-icon">
-                            <img src="images/backend-v1.svg" alt="" style="height:180px">
-                        </div>
-                        <h4>Programmer</h4>
-                        <p>Write the code that makes your hack work.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12 col-sm-6">
-                    <div class="box">
-                        <div class="box-icon">
-                            <img src="images/game-v1.svg" alt="" style="height:180px">
-                        </div>
-                        <h4>Game developer</h4>
-                        <p>Create a unique game in a short period of time.</p>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-sm-6">
-                    <div class="box">
-                        <div class="box-icon">
-                            <img src="images/hardware-v1.svg" alt="" style="height:180px">
-                        </div>
-                        <h4>Hardware hacker</h4>
-                        <p>Use hardware to solve modern problems.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <img src="images/fishy-15.svg" id="fish2">
-    <!--Feature-area/-->
-    <section class="section-padding" id="sponsors">
+    <section class="section-padding" id="">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
                     <div class="page-title">
                         <h2>Sponsor Spotlight</h2>
-                        <h3>Coming Soon!</h3>
+                        <p>Interested in becoming a sponsor? Reach out to us at <a href="mailto:outreach@vhhacks.ca">outreach@vhhacks.ca</a></p>
                     </div>
                 </div>
             </div>
-            <!--
-            //commented out sponsor boxes
             <div class="row">
-                <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
-                    <div class="testimonials">
-                        <div class="testimonial">
-                            <div class="testimonial-photo">
-                                <img src="images/avatar-small-1.png" alt="">
-                            </div>
-                            <h3>AR Rahman</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel vero dolore officiis, velit
-                                id libero illum harum hic magni, quae repellendus adipisci possimus saepe nostrum
-                                doloribus repudiandae asperiores commodi voluptate.</p>
-                        </div>
-                        <div class="testimonial">
-                            <div class="testimonial-photo">
-                                <img src="images/avatar-small-2.png" alt="">
-                            </div>
-                            <h3>AR Rahman</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel vero dolore officiis, velit
-                                id libero illum harum hic magni, quae repellendus adipisci possimus saepe nostrum
-                                doloribus repudiandae asperiores commodi voluptate.</p>
-                        </div>
-                        <div class="testimonial">
-                            <div class="testimonial-photo">
-                                <img src="images/avatar-small-3.png" alt="">
-                            </div>
-                            <h3>AR Rahman</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel vero dolore officiis, velit
-                                id libero illum harum hic magni, quae repellendus adipisci possimus saepe nostrum
-                                doloribus repudiandae asperiores commodi voluptate.</p>
-                        </div>
-                        <div class="testimonial">
-                            <div class="testimonial-photo">
-                                <img src="images/avatar-small-4.png" alt="">
-                            </div>
-                            <h3>AR Rahman</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel vero dolore officiis, velit
-                                id libero illum harum hic magni, quae repellendus adipisci possimus saepe nostrum
-                                doloribus repudiandae asperiores commodi voluptate.</p>
-                        </div>
-                        <div class="testimonial">
-                            <div class="testimonial-photo">
-                                <img src="images/avatar-small-5.png" alt="">
-                            </div>
-                            <h3>AR Rahman</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel vero dolore officiis, velit
-                                id libero illum harum hic magni, quae repellendus adipisci possimus saepe nostrum
-                                doloribus repudiandae asperiores commodi voluptate.</p>
-                        </div>
-                        <div class="testimonial">
-                            <div class="testimonial-photo">
-                                <img src="images/avatar-small-6.png" alt="">
-                            </div>
-                            <h3>AR Rahman</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel vero dolore officiis, velit
-                                id libero illum harum hic magni, quae repellendus adipisci possimus saepe nostrum
-                                doloribus repudiandae asperiores commodi voluptate.</p>
+                <!--sponsors start-->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="box">
+                        <div class="box-icon">
+                            <a href="https://notion.so"><img src="images/Notion-logo-512.png"
+                                                             style="height:175px" alt=""></a>
                         </div>
                     </div>
                 </div>
+                <!--sponsors end-->
             </div>
-
-            -->
-            <!--insert sponsor showcase boxes-->
         </div>
     </section>
+    <img src="images/fishy-15.svg" id="fish2">
+
 
     <img src="images/fishy-17.svg" id="fish3">
 
