--- a/index.html
+++ b/index.html
@@ -139,33 +139,9 @@
     </section>
 
     <img src="images/fishy-18.svg" id="fish1">
-    <section class="section-padding" id="">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
-                    <div class="page-title">
-                        <h2>Sponsor Spotlight</h2>
-                        <p>Interested in becoming a sponsor? Reach out to us at <a href="mailto:outreach@vhhacks.ca">outreach@vhhacks.ca</a></p>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <!--sponsors start-->
-                <div class="col-xs-12 col-sm-6 col-md-4">
-                    <div class="box">
-                        <div class="box-icon">
-                            <a href="https://notion.so"><img src="images/Notion-logo-512.png"
-                                                             style="height:175px" alt=""></a>
-                        </div>
-                    </div>
-                </div>
-                <!--sponsors end-->
-            </div>
-        </div>
-    </section>
+    <br><br>
     <img src="images/fishy-15.svg" id="fish2">
-
-
+    <br><br>
     <img src="images/fishy-17.svg" id="fish3">
 
     <section class="section-padding" id="faq-page">
@@ -306,7 +282,32 @@
     </section>
 
     <img src="images/fishy-14.svg" id="fish4">
-
+    <section class="section-padding" id="">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
+                    <div class="page-title">
+                        <h2>Sponsors</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <!--sponsors start-->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="box">
+                        <div class="box-icon">
+                            <a href="https://notion.so"><img src="images/Notion-logo-512.png"
+                                                             style="height:175px" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+                <!--sponsors end-->
+            </div>
+            <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
+                <p>Interested in becoming a sponsor? Reach out to us at <a href="mailto:outreach@vhhacks.ca">outreach@vhhacks.ca</a></p>
+            </div>
+        </div>
+    </section>
     <section class="section-padding" id="partners">
         <div class="container">
             <div class="row">
