Change fishy and footer

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 <!--            </div>-->
         </div>
     </section>
-    <img src="images/fishy-17.svg" id="fish3">
+    <img src="images/fishy-17.svg" id="fish2">
 
     <section class="section-padding" id="faq-page">
         <div class="container">
@@ -333,7 +333,7 @@
         </div>
     </section>
 
-    <img src="images/fishy-15.svg" id="fish2">
+    <img src="images/fishy-15.svg" id="fish3">
     <section class="section-padding" id="partners">
         <div class="container">
             <div class="row">
@@ -379,13 +379,13 @@
     <footer class="footer-area relative" id="contact-page">
         <div class="absolute footer-bg"></div>
         <img src="images/angler.svg" id="beluga">
-        <div class="full-height v-center">
+        <div class="full-height v-center footer-txt">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 text-center">
-                        <p>&copy;Copyright 2018 All rights reserved. <br>This template is made with <i class="ti-heart"
+                        <p>&copy;Copyright 2018 All rights reserved. <br>Built with <i class="ti-heart"
                                                                                                        aria-hidden="true"></i>
-                            by <a href="https://colorlib.com">Colorlib</a></p>
+                            by <a href="https://github.com/inhostudios">InhoStudios</a>. <br>Based on the Colid template from <a href="https://colorlib.com">Colorlib</a></p>
                     </div>
                 </div>
             </div>
