--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="box">
                         <div class="box-icon">
-                            <a href="https://nwplus.io"><img src="images/nwplus.png"
+                            <a href="https://www.nwplus.io"><img src="images/nwplus.png"
                                                                                style="height:175px" alt=""></a>
                         </div>
                     </div>
