Fixed bubble morphing on resize

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     </section>
 
     <img src="images/fishy-18.svg" id="fish1">
-    <section class="section-padding" id="">
+    <section class="section-padding" id="sponsors">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
@@ -305,8 +305,8 @@
         </div>
     </section>
 
-    <img src="images/fishy-14.svg" id="fish4">
-    <section class="section-padding" id="">
+    <img src="images/fishy-15.svg" id="fish3">
+    <section class="section-padding">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
@@ -333,7 +333,7 @@
         </div>
     </section>
 
-    <img src="images/fishy-15.svg" id="fish3">
+    <img src="images/fishy-14.svg" id="fish4">
     <section class="section-padding" id="partners">
         <div class="container">
             <div class="row">
@@ -379,7 +379,7 @@
     <footer class="footer-area relative" id="contact-page">
         <div class="absolute footer-bg"></div>
         <img src="images/angler.svg" id="beluga">
-        <div class="full-height v-center footer-txt">
+        <div class="full-height footer-txt">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 text-center">
