--- a/index.html
+++ b/index.html
@@ -137,6 +137,60 @@
             </div>
         </div>
     </section>
+    <!--Feature-area-->
+    <section class="section-padding" id="learn">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
+                    <div class="page-title">
+                        <h2>Pick a path!</h2>
+                        <p>vhHacks is all about learning! If you haven't attended a hackathon before, pick a path below
+                            to make your first stride!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-sm-6">
+                    <div class="box">
+                        <div class="box-icon">
+                            <img src="images/frontend-v1.svg" alt="" style="height:180px">
+                        </div>
+                        <h4>Designer</h4>
+                        <p>Design the user interface for your hack.</p>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-6">
+                    <div class="box">
+                        <div class="box-icon">
+                            <img src="images/backend-v1.svg" alt="" style="height:180px">
+                        </div>
+                        <h4>Programmer</h4>
+                        <p>Write the code that makes your hack work.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-sm-6">
+                    <div class="box">
+                        <div class="box-icon">
+                            <img src="images/game-v1.svg" alt="" style="height:180px">
+                        </div>
+                        <h4>Game developer</h4>
+                        <p>Create a unique game in a short period of time.</p>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-6">
+                    <div class="box">
+                        <div class="box-icon">
+                            <img src="images/hardware-v1.svg" alt="" style="height:180px">
+                        </div>
+                        <h4>Hardware hacker</h4>
+                        <p>Use hardware to solve modern problems.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <img src="images/fishy-18.svg" id="fish1">
     <section class="section-padding" id="sponsors">
@@ -178,7 +232,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8">
+                <div class="col-xs-12 col-sm-11 col-sm-offset-1 col-md-11">
                     <h2 style="padding-top:30px;">General Information</h2>
 
                     <div class="panel-group" id="accordion">
