--- a/index.html
+++ b/index.html
@@ -74,9 +74,11 @@
         <nav class="collapse navbar-collapse" id="primary-menu">
             <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="#home-page">Home</a></li>
+                <li><a href="#about">About</a></li>
                 <li><a href="#learn">Learn</a></li>
-                <li><a href="#sponsors">Sponsors</a></li>
+                <li><a href="#spotlight">Spotlight</a></li>
                 <li><a href="#faq-page">FAQ</a></li>
+                <li><a href="#sponsors">Sponsors</a></li>
                 <li><a href="#partners">Partners</a></li>
                 <!--<li><a href="#">Sign up!</a></li>-->
             </ul>
@@ -193,7 +195,7 @@
     </section>
 
     <img src="images/fishy-18.svg" id="fish1">
-    <section class="section-padding" id="sponsors">
+    <section class="section-padding" id="spotlight">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
@@ -360,7 +362,7 @@
     </section>
 
     <img src="images/fishy-15.svg" id="fish3">
-    <section class="section-padding">
+    <section class="section-padding" id="sponsors">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
