Change sponsors to benefactors to dodge ad block

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <li><a href="#learn">Learn</a></li>
                 <li><a href="#spotlight">Spotlight</a></li>
                 <li><a href="#faq-page">FAQ</a></li>
-                <li><a href="#sponsors">Sponsors</a></li>
+                <li><a href="#benefactors">Sponsors</a></li>
                 <li><a href="#partners">Partners</a></li>
                 <!--<li><a href="#">Sign up!</a></li>-->
             </ul>
@@ -362,7 +362,7 @@
     </section>
 
     <img src="images/fishy-15.svg" id="fish3">
-    <section class="section-padding" id="sponsors">
+    <section class="section-padding" id="benefactors">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
