--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="col-xs-8 col-md-8 header-text text-center">
                 <h2>vhHacks 2020</h2>
                 <p>March 14 - 15 <br> University of British Columbia</p>
-                <a href="#" class="button">Registration Starting Soon!</a>
+                <a href="http://vhhacks.surveysparrow.com/s/vhHacks/tt-6c1e13" class="button">I'm interested!</a>
             </div>
             <div class="col-xs-2 col-md-2"></div>
         </div>
