Add a contact section

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                 <li><a href="#faq-page">FAQ</a></li>
                 <li><a href="#benefactors">Sponsors</a></li>
                 <li><a href="#partners">Partners</a></li>
+                <li><a href="#contact">Contact</a></li>
                 <!--<li><a href="#">Sign up!</a></li>-->
             </ul>
         </nav>
@@ -419,6 +420,20 @@
                     </div>
                 </div>
                 <!--partner end-->
+            </div>
+        </div>
+    </section>
+
+    <section class="section-padding" id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
+                    <div class="page-title">
+                        <h2>Get in touch with us.</h2>
+                        <p>Interested in sponsoring? <a href="mailto:outreach@vhhacks.ca">outreach@vhhacks.ca</a></p>
+                        <p>Have a question? <a href="mailto:contact@vhhacks.ca">contact@vhhacks.ca</a></p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
