reduce navbar clutter

--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
         <!--Logo/-->
         <nav class="collapse navbar-collapse" id="primary-menu">
             <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="#home-page">Home</a></li>
-                <li><a href="#about">About</a></li>
+                <!--<li class="active"><a href="#home-page">Home</a></li>-->
+                <!--<li><a href="#about">About</a></li>-->
                 <li><a href="#learn">Learn</a></li>
                 <li><a href="#spotlight">Spotlight</a></li>
                 <li><a href="#faq-page">FAQ</a></li>
-                <li><a href="#benefactors">Sponsors</a></li>
-                <li><a href="#partners">Partners</a></li>
+                <!--<li><a href="#benefactors">Sponsors</a></li>-->
+                <!--<li><a href="#partners">Partners</a></li>-->
                 <li><a href="#contact">Contact</a></li>
                 <!--<li><a href="#">Sign up!</a></li>-->
             </ul>
