Change of Something ( i an't tell, grammar?)

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                     <div class="caption-desc" data-animation="animated fadeInUp">
                                         <p>vhHacks is one of Greater Vancouver's <i>only</i> hackathons dedicated to
                                             high school students (<b>like you!</b>) More than one hundred students
-                                            gather and collaborate to build and
+                                            will gather and collaborate to build and
                                             showcase a project in under 24 hours. No experience? No problem! vhHacks is
                                             beginner friendly, so anyone can join and learn a new skill!</p>
                                     </div>
@@ -148,7 +148,7 @@
                     <div class="page-title">
                         <h2>Pick a path!</h2>
                         <p>vhHacks is all about learning! If you haven't attended a hackathon before, pick a path below
-                            to make your first stride!</p>
+                            and dive into the world of hacking! More info to come!</p>
                     </div>
                 </div>
             </div>
@@ -278,7 +278,7 @@
                             </h4>
                             <div id="collapse4" class="panel-collapse collapse">
                                 <p>Yes. Food and snacks are provided throughout the event, even overnight! (We know you
-                                    night owls get the munchies) There are also restaurants around the venue to buy food
+                                    night owls get the munchies.) There are also restaurants around the venue to buy food
                                     and snacks, and you can always bring your own!</p>
                             </div>
                         </div>
@@ -290,9 +290,8 @@
                             <div id="collapse5" class="panel-collapse collapse">
                                 <p>Hackathons are <a
                                         href="https://medium.com/tfogo/hackathons-are-for-beginners-77a9c9c0e000#.cj21niskl">very
-                                    beginner friendly.</a> Whether you've already been in many hackathons before,
-                                    you're pursuing computer science, or an absolute beginner, you're the right fit for
-                                    vhHacks. Artists, musicians, athletes, gamers, everyone!</p>
+                                    beginner friendly.</a> Whether you're an absolute beginner, a new computer science student, or an experienced hacker,
+                                    you're the right fit for vhHacks. Artists, musicians, athletes, gamers, everyone is welcome!</p>
                             </div>
                         </div>
                         <div class="panel">
@@ -330,7 +329,7 @@
                             </h4>
                             <div id="collapse8" class="panel-collapse collapse">
                                 <p>
-                                    No worry! A lot of other hackers are in the same position. vhHacks staff will help
+                                    No worries! A lot of other hackers are in the same position. vhHacks staff will help
                                     you find other teammates and provide you with opportunities to find others!
                                 </p>
                             </div>
@@ -343,8 +342,7 @@
                             </h4>
                             <div id="collapse9" class="panel-collapse collapse">
                                 <p>
-                                    Since vhHacks is a 24 hour event, prepare to stay overnight! Food is provided at the
-                                    event, so don't worry about that. More information will come sooner to the event.
+                                    Since vhHacks is a 24 hour event, prepare to stay overnight! Food will be provided--more info to come.
                                 </p>
                             </div>
                         </div>
